k8s/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: client-deployment
spec: 
  replicas: 3
  selector: 
    matchLabels: 
      component: frontend
  template: 
    metadata: 
      labels: 
        component: frontend
    spec: 
      containers: 
        - name: client
          image: hujindi1212/fib-seq-client
          ports: 
            - containerPort: 3000
