k8s/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: worker-deployment
spec: 
  replicas: 1
  selector: 
    matchLabels: 
      componenet: worker
  template: 
    metadata: 
      labels: 
        componenet: worker
    spec: 
      containers: 
        - name: worker
          image: hujindi1212/fib-seq-worker
